# CMakeQtAPK

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
android/: AndroidManifest.xml
src/: main.cpp  slideshow.cpp  slideshow.h
src/qml/: main.qml  qml.qrc
